# drudge_tmp

./: .gitignore  CITATION.cff  DASK_MIGRATION.md  MANIFEST.in  README.md  copilot-setup-steps.yml  pyproject.toml  setup.py  test_dask_standalone.py  test_migration.py  test_migration_comprehensive.py
.circleci/: config.yml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  macos.yml  pythonapp.yml  ubuntu.yml  windows.yml
docs/: conf.py
docs/examples/: conf_ph.py  conf_ph_spin.py  gencc.py  rccsd.py
drudge/: __init__.py  canonpy.cpp  clifford.py  dask_compat.py  drs.py  drudge.py  fock.py  genquad.py  local_compat.py  nuclear.py  term.py  utils.py  wick.py  wickcore.cpp
examples/: dask_migration_example.py
tests/: bcs_test.py  bogoliubov_test.py  clifford_test.py  conftest.py  drs_test.py  free_algebra_test.py  genmb_test.py  genquad_test.py  nuclear_test.py  parthole_test.py  spin_one_half_test.py  su2_test.py
