[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drudge"
version = "0.11.0"
description = "A CAS based on sympy focusing on tensor and noncommutative algebras"
requires-python = "==3.12.*"
dependencies = [
  "sympy==1.13.2",
  "jinja2",
  "pyspark>=3.5,<3.6",
  "ipython>=8.0",
  "dummyrdd @ git+https://github.com/tschijnmo/DummyRDD.git@master"
]
classifiers = [
  'Development Status :: 1 - Planning',
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: Implementation :: CPython',
  'Topic :: Scientific/Engineering :: Mathematics'
]
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name = "Jinmo Zhao" },
  { name = "Gustavo E. Scuseria" }
]

[project.optional-dependencies]
docs = ["sphinx"]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/DrudgeCAS/drudge"

[project.scripts]
drudge = "drudge.drs:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
drudge = ["templates/*", "*.h"]
